@@ -7,8 +7,10 @@ import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class PlaceholderAPIHook extends PlaceholderExpansion {
 
@@ -24,7 +26,7 @@ public class PlaceholderAPIHook extends PlaceholderExpansion {
 
     @Override
     public @NotNull String getVersion() {
-        return "2024.4";
+        return "2024.8";
     }
 
     @Override
@@ -34,8 +36,16 @@ public class PlaceholderAPIHook extends PlaceholderExpansion {
 
     @Override
     public @Nullable String onPlaceholderRequest(Player player, @NotNull String placeholder) {
+        if (placeholder.split("_")[0].equalsIgnoreCase("gradient")) {
+            String[] placeholderData = placeholder.split("_");
+            List<String> colors = new ArrayList<>(Arrays.asList(placeholderData[1].split(",")));
+
+            return Formatter.applyGradientToText(placeholderData[2], colors.toArray(new String[]{}));
+        }
+
         for (Placeholder modifier : Formatter.getGlobalModifiers().stream().filter(modifier -> modifier instanceof Placeholder)
-                .map(modifier -> ((Placeholder) modifier)).collect(Collectors.toList())) {
+                .map(modifier -> ((Placeholder) modifier)).toList()) {
+
             for (Map.Entry<String, String> entry : modifier.getPlaceholderMap().entrySet()) {
                 if (!placeholder.equalsIgnoreCase(entry.getKey().replace("%", ""))) {
                     continue;
@@ -43,6 +53,7 @@ public class PlaceholderAPIHook extends PlaceholderExpansion {
 
                 return entry.getValue();
             }
+
         }
 
         return Formatter.format(placeholder);
